// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders MonthRect color green 1`] = `
<rect
  fill="green"
  height="10"
  width={30}
  x={68}
  y="5"
/>
`;

exports[`renders MonthRect gap 4 1`] = `
<rect
  fill="red"
  height="10"
  width={20}
  x={48}
  y="5"
/>
`;

exports[`renders MonthRect index 1 1`] = `
<rect
  fill="red"
  height="10"
  width={20}
  x={22}
  y="5"
/>
`;

exports[`renders MonthRect index 2 1`] = `
<rect
  fill="red"
  height="10"
  width={20}
  x={44}
  y="5"
/>
`;

exports[`renders MonthRect width 30 1`] = `
<rect
  fill="red"
  height="10"
  width={30}
  x={68}
  y="5"
/>
`;
